# myGame

./: .gitignore  CMakeLists.txt  README.md  gameServer.cc
include/: GameClient.h  GameServer.h  NonPlayer.h  Player.h  Util.h  gameMap.h
src/: CMakeLists.txt  GameClient.cc  GameServer.cc  NonPlayer.cc  Player.cc  gameMap.cc
test/: CMakeLists.txt  client.cc  server.cc  test.cc
